<resources>
    <string name="app_name">RandomGenerator</string>
    <string name="txt_end">End number:</string>
    <string name="txt_start">Start number:</string>
    <string name="txt_rand">Random number:</string>
    <string name="txt_tap">Tap on dice for result</string>
    <string name="dice">image of dice</string>
    <string name="txt_including_start">Including start range</string>
    <string name="txt_including_end">Including end range</string>
    <string name="txt_result">Result</string>
    <string name="txt_1">1</string>
    <string name="txt_10">10</string>
</resources>
