<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:background="#ff97d0ff">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_start"
            android:id="@+id/txtStart"
            android:layout_alignBottom="@+id/etStartNum"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_end"
            android:id="@+id/txtEnd"
            android:layout_alignBottom="@+id/etEndNum"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_tap"
            android:id="@+id/txtTap"
            android:layout_below="@+id/txtRandNumber"
            android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:id="@+id/etStartNum"
            android:gravity="center"
            android:inputType="numberSigned"
            android:text="@string/txt_1"
            android:layout_toRightOf="@+id/txtStart"
            android:layout_toEndOf="@+id/txtStart"
            android:layout_alignRight="@+id/etEndNum"
            android:layout_alignEnd="@+id/etEndNum"/>
    <EditText
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:id="@+id/etEndNum"
            android:layout_below="@+id/txtStart"
            android:inputType="numberSigned"
            android:gravity="center"
            android:text="@string/txt_10"
            android:layout_toRightOf="@+id/txtEnd"
            android:layout_toEndOf="@+id/txtEnd"
            android:layout_alignRight="@+id/switchStartRange"
            android:layout_alignEnd="@+id/switchStartRange"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_rand"
            android:id="@+id/txtRandNumber"
            android:layout_below="@+id/switchEndRange"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtResult"
            android:textColor="#ffff423a"
            android:text="@string/txt_result"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/txtTap"
            android:layout_toRightOf="@+id/txtRandNumber"
            android:layout_toEndOf="@+id/txtRandNumber"
            android:gravity="end"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_including_start"
            android:id="@+id/switchStartRange"
            android:layout_below="@+id/txtEnd"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="false"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_including_end"
            android:id="@+id/switchEndRange"
            android:layout_below="@+id/switchStartRange"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="false"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/dice"
            android:onClick="onClickGenerate"
            android:contentDescription="@string/dice"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtTap"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>